--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node server.js",
     "start": "node server",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
