--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "node": "^18.20.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
