--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
-    "node": "^18.20.2"
+    "node": "^18.20.2",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
