--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "node": "^18.20.2",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
